--- a/src/Maptz.MCodeCS.Tool/Properties/launchSettings.json
+++ b/src/Maptz.MCodeCS.Tool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Maptz.MCodeCS.Tool": {
       "commandName": "Project",
-      "commandLineArgs": "sort -i \"X:\\+++DEV\\MaptzGitHub\\vscode\\maptz.vscode.extensions.mcodecs\\src\\Maptz.MCodeCS.Tool\\Implementations\\Program.cs\""
+      "commandLineArgs": "stream"
     }
   }
 }
